infra/istio/gateway/istio-gw/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: git-ops-istio
spec:
  gatewayClassName: istio
  listeners:
  - name: git-ops-istio-gw
    port: 8086
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
