infra/istio/gateway/istio-gw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-istio
spec:
  parentRefs:
  - name: git-ops-istio
  rules:
  - backendRefs:
    - name: git-ops-init
      port: 80
      weight: 70
    - name: git-ops-init-canary
      port: 80
      weight: 30
